--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -69,13 +69,13 @@ jobs:
       uses: aws-actions/amazon-ecs-render-task-definition@v1
       with:
         task-definition: task-definition.json
-        container-name: ms-gin-go-container
+        container-name: ms-gin-go-app
         image: ${{ steps.build-image.outputs.image }}
 
     - name: Deploy Amazon ECS task definition
       uses: aws-actions/amazon-ecs-deploy-task-definition@v1
       with:
         task-definition: ${{ steps.task-def.outputs.task-definition }}
-        service: ms-gin-go-container-service
-        cluster: default-dev
+        service: ms-gin-go-app-service
+        cluster: dev-cluster
         wait-for-service-stability: true
